# fakepractice

./: .gitignore  CMakeLists.txt  comment.txt  egg  egg.c  egg.cpp  forbidfile_2.html  forbidfile_function_5.php  guitest.py  readfile.py  slice.py  sort.py  test.c  test.c.save  test.cpp  test.php  test.py  ugc2nugc_2.php
c-cpp/: .gitignore  CMakeLists.txt  README.md  alabo2roma.cpp  bloomfilter.cpp  chain-2.cpp  chain.cpp  color.cpp  cos-math.cpp  direction.cpp  division.cpp  egg.cpp.save  expandchain.cpp  function-test.cpp  huffmantree.cpp  josephson-chain.cpp  lastNumberOfExp.cpp  make-palindrome.c  multiplication_table.cpp  nicochase.cpp  palindrome-prime.c  phonebook.cpp  precies-mark.cpp  string-test.cpp  stuinfo.cpp  sysctl.conf  test-right.cpp  test.c  test.cpp  test.cpp.save  test_data_type.cpp  vector-test.cpp  vertor-test.cpp  vertor.cpp.save
c-cpp/asn/: a.asn  b.asn  test.asn
c-cpp/base/: base convert.cpp  cos-line.cpp  egg.cpp  goldbach.cpp  hanoi.cpp  josephson.cpp  numberOfTailZeroForFactorial.c  prime-magic-squre.cpp  print_year.cpp  ring.cpp  sneak.cpp  testending.cpp  type_range.cpp  veryLongIntAdd.c  veryLongIntAdd2.c
c-cpp/pb/: addressbook.pb.cc  addressbook.pb.h  addressbook.proto  addressbook_pb2.py  op.cpp
c-cpp/primer/: p7-21.h  p7-6.h  p7-7.cpp  p8-1.cpp  p8-10.cpp  p8-4.cpp  p9-18.cpp  p9-24.cpp  p9-31-1.cpp  p9-31-2.cpp
c-cpp/sort/: bubble.cpp  heap.cpp  insert.cpp  merge.cpp  quick.cpp  select.cpp  shell.cpp
php/: bloom.php  nginx.conf  sprintf.php  test.php  ugc2nugc.html
py/: createfile.py  dtest.py  metaclass.py  oop.py
(+54 files in other folders)
